controls/terraform-best-practices/ec2/api/check-ec2-admin-ports-ingress/test/good-test/good-payload-02.json
{
    "SecurityGroups": [
        {
            "Description": "Compliant SG",
            "GroupName": "good-sg-02",
            "IpPermissions": [],
            "OwnerId": "xxxx",
            "GroupId": "sg-0b5c5cdbf3475c935",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "VpcId": "vpc-0a0e88c4f0aa13753"
        }
    ]
}
